fixed issue with navbar collapse

--- a/Web Projects/Portfolio/portfolio_main.css
+++ b/Web Projects/Portfolio/portfolio_main.css
@@ -3,7 +3,6 @@ body{
 }
 
 #navbar{
-    height: 70px;
     width: 100%;
     position: fixed;
     z-index: 2;
